Somewhat fixed scaling and added onclick. Not responsive to screen sizes yet

--- a/src/pages/resume.module.css
+++ b/src/pages/resume.module.css
@@ -6,5 +6,11 @@
 }
 
 .resume {
-    /* width: auto; */
+    width: auto;
+    height: auto;
+}
+
+.resumePage {
+    width: 80%;
+    height: auto;
 }
